# HydroMech3D

./: 3DEQSim_Input_File_Generator.nb  CMakeLists.txt  HMech3d.pbs  Makefile  README.md  TEST-3DEQSim-P0-Nelts-10201-in.json  main.cpp
il/: CMakeLists.txt
il/il/algorithm/: algorithmArray.h
il/il/linearAlgebra/dense/factorization/: linearSolve.h
il/il/linearAlgebra/sparse/factorization/: Pardiso.h
il/prettyPrint/lldb/: lldbinit
src/: AssembleElasticityMatrix.cpp  AssembleElasticityMatrix.h  EQsolver.cpp  EQsolver.h  ElementData.h  FaultInSituStress.h  FaultProperties.h  FluidProperties.h  FrictionProperties.h  FullSpaceElasticity.cpp  FullSpaceElasticity.h  ImportJsonInputData.cpp  ImportJsonInputData.h  Injection.h  Mesh.cpp  Mesh.h  PermeabilityProperties.h  RK45.cpp  RK45.h  RightHandSidesODEs.h  SolidMatrixProperties.h  Solution.cpp  Solution.h  SolverParameters.h  Utils.cpp  Utils.h  loadProgramArguments.bak  loadProgramArguments.cpp  loadProgramArguments.h
src/StressKernelsP0/: StressKernelsDxP0.cpp  StressKernelsDxP0.h  StressKernelsDyP0.cpp  StressKernelsDyP0.h  StressKernelsDzP0.cpp  StressKernelsDzP0.h
test_code/: test_arma  test_arma.cpp  test_arma2.cpp  testtbb.cc
